--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ app.request.locale }}" class="{{ html_classes|default('') }}">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     {% block viewport %}
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -10,7 +10,7 @@
         <title>{{ title_prefix|default('') }}{% block title %}Welcome!{% endblock %}</title>
     {% endblock seo %}
     {% block favicon %}
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>"/>
     {% endblock favicon %}
     <link rel="manifest" href="{{ asset('build/manifest.json') }}">
     {% block extra_headers %}
@@ -18,15 +18,15 @@
             <meta name="generator" content="{{ app_version }}" />
         {% endif %}
         {% if app_color|default(false) %}
-            <meta name="msapplication-TileColor" content="#{{ app_color }}">
-            <meta name="theme-color" content="#{{ app_color }}">
+            <meta name="msapplication-TileColor" content="#{{ app_color }}"/>
+            <meta name="theme-color" content="#{{ app_color }}"/>
         {% endif %}
     {% endblock %}
     {% block stylesheets %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-              crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+              crossorigin="anonymous"/>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"/>
         {{ encore_entry_link_tags('app') }}
     {% endblock %}
     {% block header_javascripts %}
