--- a/templates/pagination/table.html.twig
+++ b/templates/pagination/table.html.twig
@@ -1,53 +1,2 @@
-{% if collection is not defined or collection|length %}
-    <table class="table {{ classes is not defined ? 'table-borderless table-striped table-hover ' ~ (append_classes|default(''))  : classes }}">
-        {% block thead %}
-            <thead>
-            <tr>
-                {% block ths %}
-                {% endblock ths %}
-            </tr>
-            </thead>
-        {% endblock thead %}
-
-        {% block tbody %}
-            <tbody>
-            {% for element in collection %}
-                {# TODO: make row clickable url configurable #}
-                <tr>
-                    {% block tds %}
-                        {# use element variable to show row data #}
-                    {% endblock tds %}
-
-                    {% block actions %}
-                    {% endblock actions %}
-                </tr>
-            {% endfor %}
-            </tbody>
-        {% endblock tbody %}
-
-        {% block tfooter %}
-            {% if collection.pages|default(false) %}
-            <tfoot>
-            <tr>
-                <td colspan="20">
-                {% include '@SfsComponents/pagination/pager.html.twig' with {'collection':collection, 'pagination_route': pagination_route|default(false), 'pagination_route_attributes': pagination_route_attributes|default([])} %}
-                </td>
-            </tr>
-            </tfoot>
-            {% endif %}
-        {% endblock tfooter %}
-    </table>
-{% else %}
-    {% block empty %}
-        <div class="p-5 m-5">
-            <p class="text-center text-muted">
-                {% if filter_form|default(false) and filter_form.vars.submitted %}
-                    {{ no_matches_message|default('No elements found, try to be less restrictive.') }}
-                {% else %}
-                    {{ empty_message|default('The list is empty') }}
-                {% endif %}
-            </p>
-        </div>
-    {% endblock empty %}
-{% endif %}
-
+{% deprecated 'Use @SfsComponents/paginator/table.html.twig' %}
+{% extends '@SfsComponents/paginator/table.html.twig' %}
