Remove deprecated softspring/admin-bundle

--- a/templates/sidebar/sidebar-list.html.twig
+++ b/templates/sidebar/sidebar-list.html.twig
@@ -1,2 +1,1 @@
-{% set sfs_components_theme = sfs_components_theme|default('bootstrap5') %}
-{% extends '@SfsComponents/sidebar/sidebar-list.'~sfs_components_theme~'.html.twig' %}
+{% extends '@SfsComponents/sidebar/sidebar-list.'~(sfs_components_theme|default('bootstrap5'))~'.html.twig' %}
