--- a/templates/flash-messages/alerts.html.twig
+++ b/templates/flash-messages/alerts.html.twig
@@ -1,2 +1,1 @@
-{% set sfs_components_theme = sfs_components_theme|default('bootstrap5') %}
-{% extends '@SfsComponents/flash-messages/alerts.'~sfs_components_theme~'.html.twig' %}
+{% extends '@SfsComponents/flash-messages/alerts.'~(sfs_components_theme|default('bootstrap5'))~'.html.twig' %}
