--- a/templates/forms/admin-horizontal.html.twig
+++ b/templates/forms/admin-horizontal.html.twig
@@ -1,2 +1,1 @@
-{% set sfs_components_theme = sfs_components_theme|default('bootstrap5') %}
-{% extends '@SfsComponents/forms/admin-horizontal.'~sfs_components_theme~'.html.twig' %}
+{% extends '@SfsComponents/forms/admin-horizontal.'~(sfs_components_theme|default('bootstrap5'))~'.html.twig' %}
