--- a/templates/layout/admin.html.twig
+++ b/templates/layout/admin.html.twig
@@ -1,2 +1,1 @@
-{% set sfs_components_theme = sfs_components_theme|default('bootstrap5') %}
-{% extends '@SfsComponents/layout/admin.'~sfs_components_theme~'.html.twig' %}
+{% extends '@SfsComponents/layout/admin.'~(sfs_components_theme|default('bootstrap5'))~'.html.twig' %}
