--- a/templates/paginator/table.html.twig
+++ b/templates/paginator/table.html.twig
@@ -1,2 +1,1 @@
-{% set sfs_components_theme = sfs_components_theme|default('bootstrap5') %}
-{% extends '@SfsComponents/paginator/table.'~sfs_components_theme~'.html.twig' %}
+{% extends '@SfsComponents/paginator/table.'~(sfs_components_theme|default('bootstrap5'))~'.html.twig' %}
