--- a/templates/sidebar/sidebar-pills.html.twig
+++ b/templates/sidebar/sidebar-pills.html.twig
@@ -1,2 +1,1 @@
-{% set sfs_components_theme = sfs_components_theme|default('bootstrap5') %}
-{% extends '@SfsComponents/sidebar/sidebar-pills.'~sfs_components_theme~'.html.twig' %}
+{% extends '@SfsComponents/sidebar/sidebar-pills.'~(sfs_components_theme|default('bootstrap5'))~'.html.twig' %}
