--- a/templates/paginator/pager.bootstrap5.html.twig
+++ b/templates/paginator/pager.bootstrap5.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain 'sfs_admin' %}
+{% trans_default_domain 'sfs_components' %}
 {% set current_route = app.request.attributes.get('_route') %}
 {% set current_route_params = app.request.attributes.get('_route_params') %}
 
