--- a/templates/sidebar/_cacheable_sidebar.html.twig
+++ b/templates/sidebar/_cacheable_sidebar.html.twig
@@ -1,7 +1,7 @@
-{% trans_default_domain 'sfs_admin' %}
+{% trans_default_domain 'sfs_components' %}
 
 {% set cacheable = admin_menu._cacheable|default(false) %}
-{% set translation_domain = admin_menu._translation_domain|default('sfs_admin') %}
+{% set translation_domain = admin_menu._translation_domain|default('sfs_components') %}
 {% set active_for_routes_class = admin_menu._active_for_routes_class|default('active') %}
 {% set show_not_granted = admin_menu._show_not_granted|default(false) %}
 
