Add manifest block

--- a/templates/base.bootstrap5.html.twig
+++ b/templates/base.bootstrap5.html.twig
@@ -13,7 +13,9 @@
     {% block favicon %}
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>"/>
     {% endblock favicon %}
-    <link rel="manifest" href="{{ asset('build/manifest.json') }}">
+    {% block manifest %}
+        <link rel="manifest" href="{{ asset('build/manifest.json') }}">
+    {% endblock manifest %}
     {% block extra_headers %}
         {% if app_version|default(false) %}
             <meta name="generator" content="{{ app_version }}" />
