--- a/templates/paginator/pager.bootstrap5.html.twig
+++ b/templates/paginator/pager.bootstrap5.html.twig
@@ -1,13 +1,14 @@
 {% trans_default_domain 'sfs_components' %}
-{% set current_route = app.request.attributes.get('_route') %}
-{% set current_route_params = app.request.attributes.get('_route_params') %}
+{% set pagination_route = pagination_route is defined ? pagination_route : app.request.attributes.get('_route') %}
+{% set pagination_route_attributes = pagination_route_attributes is defined ? pagination_route_attributes : app.request.attributes.get('_route_params') %}
+{% set query_params = query_params is defined ? query_params : app.request.query.all() %}
 
 <nav aria-label="Page navigation" class="py-3 d-flex justify-content-center justify-content-md-between align-items-center flex-column flex-md-row">
     <span class="text-gray-600 font-weight-bold">{{ 'pager.total'|trans }} {{ collection.total }}</span>
     <ul class="pagination justify-content-center flex-wrap mb-0">
         {% if not collection.isFirstPage %}
             <li class="page-item p-1">
-                <a class="page-link rounded border-0 py-1" href="{{ url(current_route, app.request.query.all()|merge(current_route_params)|merge({ page: collection.prevPage })) }}" aria-label="Previous">
+                <a class="page-link rounded border-0 py-1" href="{{ url(pagination_route, query_params|merge(pagination_route_attributes)|merge({ 'page': collection.prevPage })) }}" aria-label="Previous">
                     <span class="mdi mdi-24px mdi-chevron-left align-middle"></span>
                     <span class="sr-only">{{ 'pager.prev'|trans }}</span>
                 </a>
@@ -18,13 +19,13 @@
             {% if page == null %}
                 <li class="page-item p-1">...</li>
             {% else %}
-                <li class="page-item p-1 {{ page == collection.page | default(false)? ' active' : ''}}"><a class="page-link rounded border-0" href="{{ url(current_route, app.request.query.all()|merge(current_route_params)|merge({ page: page })) }}">{{ page }}</a></li>
+                <li class="page-item p-1 {{ page == collection.page | default(false)? ' active' : ''}}"><a class="page-link rounded border-0" href="{{ url(pagination_route, query_params|merge(pagination_route_attributes)|merge({ 'page': page })) }}">{{ page }}</a></li>
             {% endif %}
         {% endfor %}
 
         {% if not collection.isLastPage %}
             <li class="page-item p-1">
-                <a class="page-link rounded border-0 py-1" href="{{ url(current_route, app.request.query.all()|merge(current_route_params)|merge({ page: collection.nextPage })) }}" aria-label="Next">
+                <a class="page-link rounded border-0 py-1" href="{{ url(pagination_route, query_params|merge(pagination_route_attributes)|merge({ 'page': collection.nextPage })) }}" aria-label="Next">
                     <span class="sr-only">{{ 'pager.next'|trans }}</span>
                     <span class="mdi mdi-24px mdi-chevron-right align-middle"></span>
                 </a>
