--- a/templates/paginator/table.semantic-ui.html.twig
+++ b/templates/paginator/table.semantic-ui.html.twig
@@ -1,4 +1,4 @@
-{% if filter_form|default(false) and (collection|length or filter_form.vars.data|filter(v=>v) is not empty) %}
+{% if filter_form|default(false) and (collection|length or filter_form.vars.data|default([])|filter(v=>v) is not empty) %}
     {% block filters_form %}
         {{ form_start(filter_form) }}
         {% block filters %}
@@ -10,8 +10,7 @@
 {% endif %}
 
 {% if collection|length %}
-    <table
-        class="ui celled table {{ classes is not defined ? 'table-borderless table-striped table-hover ' ~ (append_classes|default(''))  : classes }}">
+    <table class="ui celled table {{ classes is not defined ? 'table-borderless table-striped table-hover ' ~ (append_classes|default(''))  : classes }}">
         {% block thead %}
             <thead>
             <tr>
@@ -45,7 +44,7 @@
                 <div class="header">
                     Info
                 </div>
-                {% if filter_form|default(false) and filter_form.vars.data|filter(v=>v) is not empty %}
+                {% if filter_form|default(false) and filter_form.vars.data|default([])|filter(v=>v) is not empty %}
                     <p>{{ no_matches_message|default('No elements found, try to be less restrictive.') }}</p>
                 {% else %}
                     {% block empty_message %}
