Add user_avatar block to admin bootstrap5 template

--- a/templates/layout/admin.bootstrap5.html.twig
+++ b/templates/layout/admin.bootstrap5.html.twig
@@ -18,7 +18,7 @@
                 <div class="container-fluid">
                     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                         <a href="/admin" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                            <img src="https://dummyimage.com/100x35/0d6efd/ffffff.png?text=LOGO" height="35" alt="logo"/>
+                            {% block logo_img %}<img src="https://dummyimage.com/100x35/0d6efd/ffffff.png?text=LOGO" height="35" alt="logo"/>{% endblock %}
                         </a>
 
                         <div class="col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -26,9 +26,11 @@
 
                         <div class="dropdown text-end">
                             <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-{#                                {% if sfs_user_is('avatar') %}#}
-{#                                    <img alt="{{ app.user.displayName }}" src="{{ app.user.avatarUrl }}" width="32" height="32" class="rounded-circle me-2">#}
-{#                                {% endif %}#}
+                                {% block user_avatar %}
+                                    {% if sfs_user_is('avatar') %}
+                                        <img alt="{{ app.user.displayName }}" src="{{ app.user.avatarUrl }}" width="32" height="32" class="rounded-circle">
+                                    {% endif %}
+                                {% endblock %}
                             </a>
                             <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1" data-popper-placement="bottom-start" style="position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate(0px, 34px);">
                                 {% if route_defined('sfs_user_preferences') %}
@@ -69,13 +71,6 @@
                     </small>
                 {% endblock breadcrumbs %}
                 {% block content %}
-                    &nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>
-                    &nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>
-                    &nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>
-                    &nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>
-                    &nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>
-                    &nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>
-                    &nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>
                 {% endblock content %}
             </section>
         </main>
