--- a/templates/layout/admin.bootstrap5.html.twig
+++ b/templates/layout/admin.bootstrap5.html.twig
@@ -1,14 +1,20 @@
 {% extends 'base.html.twig' %}
 
 {% block stylesheets %}
-    {{ encore_entry_link_tags('admin') }}
+    {# OVERRIDE THIS BLOCK AND INCLUDE ENCORE TAGS TO USE YOUR CUSTOM STYLES #}
+    {#{{ encore_entry_link_tags('admin') }}#}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 {% endblock %}
 
 {% block header_javascripts %}
-    {{ encore_entry_script_tags('admin') }}
+    {# OVERRIDE THIS BLOCK AND INCLUDE ENCORE TAGS TO USE YOUR CUSTOM JS #}
+    {#{{ encore_entry_script_tags('admin') }}#}
 {% endblock %}
 
 {% block javascripts %}
+    {# OVERRIDE THIS BLOCK AND INCLUDE ENCORE TAGS TO USE YOUR CUSTOM JS #}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 {% endblock %}
 
 {% block body %}
