--- a/templates/paginator/pager.bootstrap5.html.twig
+++ b/templates/paginator/pager.bootstrap5.html.twig
@@ -5,12 +5,12 @@
 
 <nav aria-label="Page navigation" class="py-3 d-flex justify-content-center justify-content-md-between align-items-center flex-column flex-md-row">
     <span class="text-gray-600 font-weight-bold">{{ 'pager.total'|trans }} {{ collection.total }}</span>
-    <ul class="pagination">
+    <ul class="pagination mb-0">
         {% if not collection.isFirstPage %}
             <li class="page-item">
-                <a class="page-link border-0 py-0" href="{{ url(pagination_route, query_params|merge(pagination_route_attributes)|merge({ 'page': collection.prevPage })) }}" aria-label="Previous">
-                    <span class="mdi mdi-24px mdi-chevron-left align-middle"></span>
-                    <span class="sr-only">{{ 'pager.prev'|trans }}</span>
+                <a class="page-link" href="{{ url(pagination_route, query_params|merge(pagination_route_attributes)|merge({ 'page': collection.prevPage })) }}" aria-label="Previous">
+                    <span class="bi bi-chevron-left align-middle"></span>
+                    <span class="page-prev-text">{{ 'pager.prev'|trans }}</span>
                 </a>
             </li>
         {% endif %}
@@ -19,15 +19,15 @@
             {% if page == null %}
                 <li class="page-item">...</li>
             {% else %}
-                <li class="page-item {{ page == collection.page | default(false)? ' active' : ''}}"><a class="page-link border-0" href="{{ url(pagination_route, query_params|merge(pagination_route_attributes)|merge({ 'page': page })) }}">{{ page }}</a></li>
+                <li class="page-item {{ page == collection.page | default(false)? ' active' : ''}}"><a class="page-link" href="{{ url(pagination_route, query_params|merge(pagination_route_attributes)|merge({ 'page': page })) }}">{{ page }}</a></li>
             {% endif %}
         {% endfor %}
 
         {% if not collection.isLastPage %}
             <li class="page-item">
-                <a class="page-link border-0 py-0" href="{{ url(pagination_route, query_params|merge(pagination_route_attributes)|merge({ 'page': collection.nextPage })) }}" aria-label="Next">
-                    <span class="sr-only">{{ 'pager.next'|trans }}</span>
-                    <span class="mdi mdi-24px mdi-chevron-right align-middle"></span>
+                <a class="page-link" href="{{ url(pagination_route, query_params|merge(pagination_route_attributes)|merge({ 'page': collection.nextPage })) }}" aria-label="Next">
+                    <span class="page-next-text">{{ 'pager.next'|trans }}</span>
+                    <span class="bi bi-chevron-right align-middle"></span>
                 </a>
             </li>
         {% endif %}
